Make Java 25 the authoritative root build and retire legacy bootstrap